<resources>
    <string name="app_name">MyToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="_24_00">24:00</string>
    <string name="note_content">Note content</string>
    <string name="add_notification">Add notification</string>
    <string name="notify">Notify</string>
    <string name="set_time">Set time</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="options">Options</string>
    <string name="clear">Clear</string>
    <string name="delete_done_notes">Delete done notes</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="hide_done">Hide done</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="_00_00">00:00</string>
    <string name="_23_59">23:59</string>
</resources>